syntax = "proto3";

package habits;
option go_package = "learngo-pockets/habits/api";

import "habit.proto";
import "google/protobuf/timestamp.proto";

// Habits is a service for registering and tracking habits.
service Habits {
  // CreateHabit is the endpoint that registers a habit.
  rpc CreateHabit(CreateHabitRequest) returns (CreateHabitResponse);

  // ListHabits is the endpoint that returns all habits.
  rpc ListHabits(ListHabitsRequest) returns (ListHabitsResponse);

  // TickHabit is the endpoint to tick a habit.
  rpc TickHabit(TickHabitRequest) returns (TickHabitResponse);

  // GetHabitStatus is the endpoint to retrieve the status of ticks of a habit.
  rpc GetHabitStatus(GetHabitStatusRequest) returns (GetHabitStatusResponse);
}

// CreateHabitRequest is the message sent to create a habit.
message CreateHabitRequest {
  // Name of the new habit. Cannot be empty.
  string name = 1;
  // Frequency of the new habit. Defaults to once per week.
  optional int32 weekly_frequency = 2;
}

// CreateHabitResponse is the response of the create endpoint.
message CreateHabitResponse {
  Habit habit = 1;
}

// ListHabitsRequest is the request to list all the habits saved.
message ListHabitsRequest {

}

// ListHabitsResponse is the response with all the saved habits.
message ListHabitsResponse {
  repeated Habit habits = 1;
}

message TickHabitRequest {
  string habit_id = 1;
}

message TickHabitResponse {

}

message GetHabitStatusRequest {
  string habit_id = 1;
  optional google.protobuf.Timestamp time = 2;
}

message GetHabitStatusResponse {
  Habit habit = 1;
  int32 ticks_count = 2;
}
